--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Karantina:wght@300;400;700&family=Matemasie&family=Montserrat:ital,wght@0,600;1,600&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -12,5 +14,110 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 2% 1%;
+    margin: 3% 3%;
 }
+
+.principal__logo {
+    width: 5%;
+}
+
+.principal__insere-texto {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 2.5%;
+    width: 33.3%;
+    margin-bottom: 5%;
+}
+
+.principal__insere-texto__input {
+    background-color: #F3F5FC;
+    color: #0A3871;
+    border: none;
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2rem;
+    margin-top: 20%;
+    content: 100%;
+    height: 70%;
+}
+
+.principal__insere-texto__alerta {
+    display: flex;
+    gap: 1%;
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 0.75rem;
+}
+
+.principal__insere-texto__botoes {
+    display: flex;
+    gap: 5%;
+}
+
+.principal__insere-texto__botoes__botao {
+    padding-top: 5%;
+    padding-bottom: 5%;
+    border-radius: 24px;
+    border: 1px solid;
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.18rem;
+}
+
+.principal__insere-texto__botoes__botao:hover {
+    cursor: pointer;
+}
+
+#criptografar {
+    padding-right: 20%;
+    padding-left: 20%;
+    background-color: #0A3871;
+    color: #FFFFFF;
+}
+
+#descriptografar {
+    padding-right: 17%;
+    padding-left: 17%;
+    background-color: #D8DFE8;
+    border-color: #0A3871;
+}
+
+.principal__exibe-texto {
+    width: 33.3%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFFFFF;
+    border-radius: 32px;
+    padding: 15% 0;
+
+}
+
+.principal__exibe-texto__img {
+    width: 336px;
+    height: 304px;
+}
+
+.principal__exibe-texto__no-msg {
+    margin: 10%;
+}
+
+.principal__exibe-texto__no-msg__titulo{
+    font-family: "Inter", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 1.5rem;
+}
+
+.principal__exibe-texto__no-msg__paragrafo{
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1rem;
+}
+
